--- a/home/src/main/res/layout/fragment_home_mine.xml
+++ b/home/src/main/res/layout/fragment_home_mine.xml
@@ -18,6 +18,9 @@
         <variable
             name="aboutPageClickListener"
             type="OnClickListener" />
+        <variable
+            name="clearCacheClickListener"
+            type="OnClickListener" />
     </data>
 
     <ScrollView
@@ -77,6 +80,11 @@
                 layout="@layout/layout_mine_item"
                 app:itemName="@{@string/home_mine_about_page}"
                 app:clickListener="@{aboutPageClickListener}"/>
+
+            <include
+                layout="@layout/layout_mine_item"
+                app:itemName="@{@string/home_mine_clear_cache}"
+                app:clickListener="@{clearCacheClickListener}"/>
         </LinearLayout>
     </ScrollView>
     
