--- a/musiclibrary/src/main/res/values/attr.xml
+++ b/musiclibrary/src/main/res/values/attr.xml
@@ -25,4 +25,10 @@
         <attr name="outer_indicator_color" format="color"/>
 
     </declare-styleable>
+
+    <declare-styleable name="NumberView">
+        <attr name="number" format="integer"/>
+        <attr name="android:color" format="color"/>
+        <attr name="android:textSize" format="float"/>
+    </declare-styleable>
 </resources>
